Launch mbserver with a script that reads memory tuning data.
This effectively makes membroker the source of pages.  For this to work
correctly, we must have changes in place to make hydra not attempt to
register as a source if the server already has pages.

EV 380672  900FE w/ 4GB DIMM

Review-link: https://reviews.lpdev.prtdev.lexmark.com/r/44563/
Signed-off-by: Scott Arrington <sarringt@lexmark.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,6 @@
 TESTS =
 bin_PROGRAMS =
+bin_SCRIPTS =
 noinst_PROGRAMS =
 lib_LTLIBRARIES =
 noinst_LTLIBRARIES =
@@ -30,6 +31,8 @@ mbserver_SOURCES = \
 	src/main.c \
 	src/mbserver.h
 mbserver_LDADD = libmbs.la libmembroker.la
+
+bin_SCRIPTS += src/membroker
 
 noinst_PROGRAMS += mbctest
 mbctest_SOURCES = \
