Makefile.am: install both pkg-config files

--- a/Makefile.am
+++ b/Makefile.am
@@ -4,10 +4,11 @@ bin_SCRIPTS =
 noinst_PROGRAMS =
 lib_LTLIBRARIES =
 noinst_LTLIBRARIES =
+pkgconfig_DATA =
 
 pkgconfigdir = $(libdir)/pkgconfig
-pkgconfig_DATA = membroker.pc
-pkgconfig_DATA = membrokerserver.pc
+pkgconfig_DATA += membroker.pc
+pkgconfig_DATA += membrokerserver.pc
 
 systemdsystemunit_DATA = src/membroker.service src/membroker.socket
 
