Makefile.am: build and install mbstatus

--- a/Makefile.am
+++ b/Makefile.am
@@ -38,6 +38,10 @@ bin_PROGRAMS += mbutil
 mbutil_SOURCES = src/mbutil.c
 mbutil_LDADD = libmbs.la libmembroker.la
 
+bin_PROGRAMS += mbstatus
+mbstatus_SOURCES = src/mbstatus.c
+mbstatus_LDADD = libmbs.la libmembroker.la
+
 bin_SCRIPTS += src/membroker
 
 noinst_PROGRAMS += mbctest
